
include_directories(engine engine/include)

add_subdirectory(engine)

add_subdirectory(test)
add_subdirectory(test2)
add_subdirectory(test3)
add_subdirectory(test4)
add_subdirectory(test5)
add_subdirectory(test6)
add_subdirectory(test7)
add_subdirectory(test8)
add_subdirectory(test9)
add_subdirectory(test10)
add_subdirectory(test11)


add_subdirectory(test12)
add_subdirectory(test13)
add_subdirectory(test14)
add_subdirectory(test15)
add_subdirectory(test16)
